[gd_scene load_steps=10 format=2]

[ext_resource path="res://room_templates/BaseRoom.gd" type="Script" id=1]
[ext_resource path="res://assets/tile_maps/TileMap.gd" type="Script" id=2]
[ext_resource path="res://assets/tile_maps/Damage_TileSet.tres" type="TileSet" id=3]
[ext_resource path="res://room_templates/exit_vert.tscn" type="PackedScene" id=4]
[ext_resource path="res://room_templates/exit_hori.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/tile_maps/TileSet_v1.tres" type="TileSet" id=6]
[ext_resource path="res://items_objects/health_pickup.tscn" type="PackedScene" id=7]
[ext_resource path="res://baddies/characters/BearBoi.tscn" type="PackedScene" id=8]
[ext_resource path="res://items_objects/breakable_tile_purple.tscn" type="PackedScene" id=9]

[node name="Room Root" type="Node2D" groups=[
"Room",
]]
script = ExtResource( 1 )

[node name="Background" type="TileMap" parent="."]
z_index = -5
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1

[node name="DamagePools" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
collision_layer = 64
collision_mask = 5
format = 1

[node name="OneWayPlatforms" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
collision_layer = 8
collision_mask = 5
format = 1

[node name="BaseTiles" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( -1310741, 4, 8, -1310740, 4, 10, -1310739, 4, 10, -1310738, 4, 10, -1310737, 4, 10, -1310736, 4, 10, -1310735, 4, 10, -1310734, 4, 10, -1310733, 4, 10, -1310732, 4, 10, -1310731, 4, 10, -1310730, 4, 10, -1310729, 4, 10, -1310728, 4, 10, -1310727, 4, 10, -1310726, 4, 10, -1310725, 4, 10, -1310724, 4, 10, -1310723, 4, 11, -1376254, 4, 8, -1376253, 4, 10, -1376252, 4, 10, -1376251, 4, 10, -1376250, 4, 10, -1376249, 4, 10, -1376248, 4, 10, -1376247, 4, 10, -1376246, 4, 10, -1376245, 4, 10, -1376244, 4, 10, -1376243, 4, 10, -1376242, 4, 10, -1376241, 4, 10, -1376240, 4, 11, -1245205, 4, 65544, -1245204, 4, 131081, -1245203, 4, 131081, -1245202, 4, 131081, -1245201, 4, 131081, -1245200, 4, 131081, -1245199, 4, 131081, -1245198, 4, 131081, -1245197, 4, 131081, -1245196, 4, 131081, -1245195, 4, 131078, -1245194, 4, 196617, -1245193, 4, 196617, -1245192, 4, 196617, -1245191, 4, 196617, -1245190, 4, 196617, -1245189, 4, 196617, -1245188, 4, 196617, -1245187, 4, 196619, -1310718, 4, 196616, -1310717, 4, 196617, -1310716, 4, 196617, -1310715, 4, 196617, -1310714, 4, 196617, -1310713, 4, 196617, -1310712, 4, 196617, -1310711, 4, 196617, -1310710, 4, 196617, -1310709, 4, 196617, -1310708, 4, 196617, -1310707, 4, 131077, -1310706, 4, 131081, -1310705, 4, 131081, -1310704, 4, 131083, -1179669, 4, 65544, -1179668, 4, 131081, -1179667, 4, 131081, -1179666, 4, 131081, -1179665, 4, 131081, -1179664, 4, 131081, -1179663, 4, 131081, -1179662, 4, 131081, -1179661, 4, 131081, -1179660, 4, 131081, -1179659, 4, 131083, -1245171, 4, 65544, -1245170, 4, 131081, -1245169, 4, 131081, -1245168, 4, 131083, -1114133, 4, 65544, -1114132, 4, 131081, -1114131, 4, 131081, -1114130, 4, 131081, -1114129, 4, 131081, -1114128, 4, 131081, -1114127, 4, 131081, -1114126, 4, 131081, -1114125, 4, 131081, -1114124, 4, 131081, -1114123, 4, 131083, -1114118, 4, 8, -1114117, 4, 10, -1114116, 4, 10, -1114115, 4, 11, -1179646, 4, 8, -1179645, 4, 10, -1179644, 4, 10, -1179643, 4, 10, -1179642, 4, 11, -1179638, 4, 8, -1179637, 4, 11, -1179635, 4, 65544, -1179634, 4, 131081, -1179633, 4, 131081, -1179632, 4, 131083, -1048597, 4, 65544, -1048596, 4, 131081, -1048595, 4, 131081, -1048594, 4, 131081, -1048593, 4, 131081, -1048592, 4, 131081, -1048591, 4, 131081, -1048590, 4, 131081, -1048589, 4, 131081, -1048588, 4, 131081, -1048587, 4, 131083, -1048582, 4, 65544, -1048581, 4, 131081, -1048580, 4, 131081, -1048579, 4, 65542, -1048578, 4, 10, -1048577, 4, 11, -1114111, 4, 8, -1114110, 4, 65541, -1114109, 4, 131081, -1114108, 4, 131081, -1114107, 4, 131081, -1114106, 4, 131083, -1114102, 4, 65544, -1114101, 4, 131083, -1114099, 4, 65544, -1114098, 4, 131081, -1114097, 4, 131081, -1114096, 4, 131083, -983061, 4, 65544, -983060, 4, 131081, -983059, 4, 131081, -983058, 4, 131081, -983057, 4, 131081, -983056, 4, 131081, -983055, 4, 131081, -983054, 4, 131081, -983053, 4, 131081, -983052, 4, 131081, -983051, 4, 131083, -983046, 4, 65544, -983045, 4, 131081, -983044, 4, 131081, -983043, 4, 131081, -983042, 4, 131081, -983041, 4, 131083, -1048575, 4, 65544, -1048574, 4, 131081, -1048573, 4, 131081, -1048572, 4, 131081, -1048571, 4, 131081, -1048570, 4, 131083, -1048566, 4, 65544, -1048565, 4, 131083, -1048563, 4, 65544, -1048562, 4, 131081, -1048561, 4, 131081, -1048560, 4, 131083, -917525, 4, 65544, -917524, 4, 131081, -917523, 4, 131081, -917522, 4, 131081, -917521, 4, 131081, -917520, 4, 131081, -917519, 4, 131081, -917518, 4, 131081, -917517, 4, 131081, -917516, 4, 131081, -917515, 4, 65542, -917514, 4, 10, -917513, 4, 10, -917512, 4, 10, -917511, 4, 10, -917510, 4, 65541, -917509, 4, 131081, -917508, 4, 131081, -917507, 4, 131081, -917506, 4, 131081, -917505, 4, 131083, -983039, 4, 65544, -983038, 4, 131081, -983037, 4, 131081, -983036, 4, 131081, -983035, 4, 131081, -983034, 4, 131083, -983030, 4, 196616, -983029, 4, 196619, -983027, 4, 65544, -983026, 4, 131081, -983025, 4, 131081, -983024, 4, 131083, -851989, 4, 65544, -851988, 4, 131081, -851987, 4, 131081, -851986, 4, 131081, -851985, 4, 131081, -851984, 4, 131081, -851983, 4, 131081, -851982, 4, 131081, -851981, 4, 131081, -851980, 4, 131081, -851979, 4, 131081, -851978, 4, 131081, -851977, 4, 131081, -851976, 4, 131081, -851975, 4, 131081, -851974, 4, 131081, -851973, 4, 131081, -851972, 4, 131081, -851971, 4, 131081, -851970, 4, 131081, -851969, 4, 131083, -917503, 4, 131076, -917502, 4, 196617, -917501, 4, 196617, -917500, 4, 196617, -917499, 4, 196617, -917498, 4, 131082, -917497, 4, 11, -917491, 4, 65544, -917490, 4, 131081, -917489, 4, 131081, -917488, 4, 131083, -786453, 4, 65544, -786452, 4, 131081, -786451, 4, 131081, -786450, 4, 131081, -786449, 4, 131081, -786448, 4, 131081, -786447, 4, 131081, -786446, 4, 131081, -786445, 4, 131081, -786444, 4, 131081, -786443, 4, 131081, -786442, 4, 131081, -786441, 4, 131081, -786440, 4, 131081, -786439, 4, 131081, -786438, 4, 131081, -786437, 4, 131081, -786436, 4, 131081, -786435, 4, 131081, -786434, 4, 131081, -786433, 4, 131083, -851967, 4, 65536, -851962, 4, 65544, -851961, 4, 131083, -851955, 4, 65544, -851954, 4, 131081, -851953, 4, 131081, -851952, 4, 131083, -720917, 4, 65544, -720916, 4, 131081, -720915, 4, 131081, -720914, 4, 131081, -720913, 4, 131081, -720912, 4, 131081, -720911, 4, 131081, -720910, 4, 131081, -720909, 4, 131081, -720908, 4, 131081, -720907, 4, 131081, -720906, 4, 131081, -720905, 4, 131081, -720904, 4, 131081, -720903, 4, 131081, -720902, 4, 131081, -720901, 4, 131081, -720900, 4, 131081, -720899, 4, 131081, -720898, 4, 131081, -720897, 4, 131083, -786431, 4, 131072, -786426, 4, 196616, -786425, 4, 196619, -786419, 4, 196616, -786418, 4, 131077, -786417, 4, 131081, -786416, 4, 131083, -655381, 4, 65544, -655380, 4, 131081, -655379, 4, 131081, -655378, 4, 131081, -655377, 4, 131081, -655376, 4, 131081, -655375, 4, 131081, -655374, 4, 131081, -655373, 4, 131081, -655372, 4, 131081, -655371, 4, 131081, -655370, 4, 131081, -655369, 4, 131081, -655368, 4, 131081, -655367, 4, 131081, -655366, 4, 131081, -655365, 4, 131081, -655364, 4, 131081, -655363, 4, 131081, -655362, 4, 131081, -655361, 4, 131083, -720882, 4, 65544, -720881, 4, 131081, -720880, 4, 131083, -589845, 4, 65544, -589844, 4, 131081, -589843, 4, 131081, -589842, 4, 131081, -589841, 4, 131081, -589840, 4, 131081, -589839, 4, 131081, -589838, 4, 131081, -589837, 4, 131081, -589836, 4, 131081, -589835, 4, 131081, -589834, 4, 131081, -589833, 4, 131081, -589832, 4, 131081, -589831, 4, 131081, -589830, 4, 131081, -589829, 4, 131081, -589828, 4, 131081, -589827, 4, 131081, -589826, 4, 131081, -589825, 4, 65542, -655360, 4, 10, -655359, 4, 11, -655354, 4, 8, -655353, 4, 10, -655352, 4, 10, -655351, 4, 10, -655350, 4, 10, -655349, 4, 11, -655346, 4, 65544, -655345, 4, 131081, -655344, 4, 131083, -524309, 4, 65544, -524308, 4, 131081, -524307, 4, 131081, -524306, 4, 131081, -524305, 4, 131081, -524304, 4, 131081, -524303, 4, 131081, -524302, 4, 131081, -524301, 4, 131081, -524300, 4, 131081, -524299, 4, 131081, -524298, 4, 131081, -524297, 4, 131081, -524296, 4, 131081, -524295, 4, 131081, -524294, 4, 131081, -524293, 4, 131081, -524292, 4, 131081, -524291, 4, 131081, -524290, 4, 131081, -524289, 4, 131081, -589824, 4, 131081, -589823, 4, 65542, -589822, 4, 6, -589821, 4, 196609, -589820, 4, 196609, -589819, 4, 196609, -589818, 4, 131080, -589817, 4, 131081, -589816, 4, 131081, -589815, 4, 131081, -589814, 4, 131078, -589813, 4, 196619, -589810, 4, 196616, -589809, 4, 131077, -589808, 4, 131083, -458773, 4, 65544, -458772, 4, 131081, -458771, 4, 131081, -458770, 4, 131081, -458769, 4, 131081, -458768, 4, 131081, -458767, 4, 131081, -458766, 4, 131081, -458765, 4, 131081, -458764, 4, 131081, -458763, 4, 131081, -458762, 4, 131081, -458761, 4, 131081, -458760, 4, 131081, -458759, 4, 131081, -458758, 4, 131081, -458757, 4, 131081, -458756, 4, 131078, -458755, 4, 196617, -458754, 4, 196617, -458753, 4, 196617, -524288, 4, 196617, -524287, 4, 131077, -524286, 4, 131083, -524282, 4, 196616, -524281, 4, 196617, -524280, 4, 196617, -524279, 4, 131077, -524278, 4, 131083, -524273, 4, 65544, -524272, 4, 131083, -393237, 4, 65544, -393236, 4, 131081, -393235, 4, 131081, -393234, 4, 131081, -393233, 4, 131081, -393232, 4, 131081, -393231, 4, 131081, -393230, 4, 131081, -393229, 4, 131081, -393228, 4, 131081, -393227, 4, 131081, -393226, 4, 131078, -393225, 4, 196617, -393224, 4, 196617, -393223, 4, 196617, -393222, 4, 131077, -393221, 4, 131081, -393220, 4, 131083, -458751, 4, 196616, -458750, 4, 196619, -458743, 4, 196616, -458742, 4, 196619, -458737, 4, 196616, -458736, 4, 196619, -327701, 4, 65544, -327700, 4, 131081, -327699, 4, 131081, -327698, 4, 131081, -327697, 4, 131081, -327696, 4, 131078, -327695, 4, 196617, -327694, 4, 196617, -327693, 4, 196617, -327692, 4, 196617, -327691, 4, 131077, -327690, 4, 131083, -327686, 4, 65544, -327685, 4, 131081, -327684, 4, 131083, -262165, 4, 65544, -262164, 4, 131081, -262163, 4, 131081, -262162, 4, 131081, -262161, 4, 131078, -262160, 4, 196619, -262155, 4, 196616, -262154, 4, 196619, -262150, 4, 65544, -262149, 4, 131081, -262148, 4, 65542, -262147, 4, 10, -262146, 4, 10, -262145, 4, 11, -327677, 4, 8, -327676, 4, 10, -327675, 4, 11, -327671, 4, 1, -327670, 4, 196610, -196629, 4, 65544, -196628, 4, 131081, -196627, 4, 131081, -196626, 4, 131081, -196625, 4, 131083, -196614, 4, 65544, -196613, 4, 131081, -196612, 4, 131081, -196611, 4, 131081, -196610, 4, 131081, -196609, 4, 131083, -262141, 4, 65544, -262140, 4, 131081, -262139, 4, 65542, -262138, 4, 10, -262137, 4, 10, -262136, 4, 10, -262135, 4, 65543, -131093, 4, 65544, -131092, 4, 131081, -131091, 4, 131081, -131090, 4, 131081, -131089, 4, 131083, -131086, 4, 8, -131085, 4, 10, -131084, 4, 10, -131083, 4, 10, -131082, 4, 11, -131078, 4, 65544, -131077, 4, 131081, -131076, 4, 131081, -131075, 4, 131081, -131074, 4, 131081, -131073, 4, 131083, -196606, 4, 8, -196605, 4, 65541, -196604, 4, 131081, -196603, 4, 131081, -196602, 4, 131081, -196601, 4, 131081, -196600, 4, 131081, -196599, 4, 131083, -196594, 4, 0, -65557, 4, 65544, -65556, 4, 131081, -65555, 4, 131081, -65554, 4, 131081, -65553, 4, 131083, -65550, 4, 65544, -65549, 4, 131081, -65548, 4, 131081, -65547, 4, 131081, -65546, 4, 65542, -65545, 4, 11, -65543, 4, 8, -65542, 4, 65541, -65541, 4, 131081, -65540, 4, 131081, -65539, 4, 131081, -65538, 4, 131081, -65537, 4, 131083, -131070, 4, 65544, -131069, 4, 131081, -131068, 4, 131081, -131067, 4, 131081, -131066, 4, 131081, -131065, 4, 131081, -131064, 4, 131081, -131063, 4, 131083, -131058, 4, 65540, -131057, 4, 10, -131056, 4, 11, -21, 4, 65544, -20, 4, 131081, -19, 4, 131078, -18, 4, 196617, -17, 4, 196619, -14, 4, 65544, -13, 4, 131081, -12, 4, 131081, -11, 4, 131081, -10, 4, 131081, -9, 4, 131083, -7, 4, 65544, -6, 4, 131081, -5, 4, 131081, -4, 4, 131081, -3, 4, 131078, -2, 4, 196617, -1, 4, 196619, -65534, 4, 65544, -65533, 4, 131081, -65532, 4, 131081, -65531, 4, 131081, -65530, 4, 131081, -65529, 4, 131081, -65528, 4, 131081, -65527, 4, 131083, -65522, 4, 65544, -65521, 4, 131081, -65520, 4, 131083, 65515, 4, 131076, 65516, 4, 196617, 65517, 4, 196619, 65522, 4, 196616, 65523, 4, 196617, 65524, 4, 196617, 65525, 4, 196617, 65526, 4, 196617, 65527, 4, 196619, 65529, 4, 196616, 65530, 4, 196617, 65531, 4, 196617, 65532, 4, 196617, 65533, 4, 196619, 2, 4, 196616, 3, 4, 196617, 4, 4, 196617, 5, 4, 196617, 6, 4, 196617, 7, 4, 196617, 8, 4, 196617, 9, 4, 196619, 14, 4, 65544, 15, 4, 131081, 16, 4, 131083, 131051, 4, 65536, 65550, 4, 65544, 65551, 4, 131081, 65552, 4, 131083, 196587, 4, 65536, 196594, 4, 8, 196595, 4, 10, 196596, 4, 10, 196597, 4, 10, 196598, 4, 10, 196599, 4, 11, 196601, 4, 196608, 196602, 4, 196609, 196603, 4, 5, 196604, 4, 10, 196605, 4, 6, 196606, 4, 196609, 196607, 4, 196610, 131074, 4, 196608, 131075, 4, 196609, 131076, 4, 5, 131077, 4, 11, 131081, 4, 0, 131086, 4, 65544, 131087, 4, 131081, 131088, 4, 131083, 262123, 4, 65536, 262130, 4, 65544, 262131, 4, 131081, 262132, 4, 131081, 262133, 4, 131081, 262134, 4, 131078, 262135, 4, 196619, 262139, 4, 131076, 262140, 4, 196617, 262141, 4, 196619, 196612, 4, 196616, 196613, 4, 196619, 196617, 4, 65540, 196618, 4, 10, 196619, 4, 10, 196620, 4, 10, 196621, 4, 10, 196622, 4, 65541, 196623, 4, 131081, 196624, 4, 131083, 327659, 4, 65536, 327663, 4, 8, 327664, 4, 10, 327665, 4, 10, 327666, 4, 65541, 327667, 4, 131081, 327668, 4, 131081, 327669, 4, 131081, 327670, 4, 131083, 327675, 4, 131072, 262153, 4, 65544, 262154, 4, 131081, 262155, 4, 131081, 262156, 4, 131081, 262157, 4, 131081, 262158, 4, 131081, 262159, 4, 131081, 262160, 4, 131083, 393195, 4, 65540, 393196, 4, 10, 393197, 4, 10, 393198, 4, 10, 393199, 4, 65541, 393200, 4, 131081, 393201, 4, 131081, 393202, 4, 131081, 393203, 4, 131081, 393204, 4, 131081, 393205, 4, 131081, 393206, 4, 131083, 327684, 4, 8, 327685, 4, 11, 327689, 4, 65544, 327690, 4, 131081, 327691, 4, 131081, 327692, 4, 131081, 327693, 4, 131081, 327694, 4, 131081, 327695, 4, 131081, 327696, 4, 131083, 458731, 4, 65544, 458732, 4, 131081, 458733, 4, 131081, 458734, 4, 131081, 458735, 4, 131081, 458736, 4, 131081, 458737, 4, 131081, 458738, 4, 131081, 458739, 4, 131081, 458740, 4, 131081, 458741, 4, 131081, 458742, 4, 131083, 393220, 4, 65544, 393221, 4, 65542, 393222, 4, 10, 393223, 4, 10, 393224, 4, 10, 393225, 4, 65541, 393226, 4, 131081, 393227, 4, 131081, 393228, 4, 131081, 393229, 4, 131081, 393230, 4, 131081, 393231, 4, 131081, 393232, 4, 131083, 524267, 4, 65544, 524268, 4, 131081, 524269, 4, 131081, 524270, 4, 131081, 524271, 4, 131081, 524272, 4, 131081, 524273, 4, 131081, 524274, 4, 131081, 524275, 4, 131081, 524276, 4, 131081, 524277, 4, 131081, 524278, 4, 131083, 524281, 4, 196608, 524282, 4, 196610, 524284, 4, 8, 524285, 4, 10, 524286, 4, 10, 524287, 4, 10, 458752, 4, 10, 458753, 4, 10, 458754, 4, 10, 458755, 4, 10, 458756, 4, 65541, 458757, 4, 131081, 458758, 4, 131081, 458759, 4, 131081, 458760, 4, 131081, 458761, 4, 131081, 458762, 4, 131081, 458763, 4, 131081, 458764, 4, 131081, 458765, 4, 131081, 458766, 4, 131081, 458767, 4, 131081, 458768, 4, 131083, 589803, 4, 65544, 589804, 4, 131081, 589805, 4, 131081, 589806, 4, 131081, 589807, 4, 131081, 589808, 4, 131081, 589809, 4, 131081, 589810, 4, 131081, 589811, 4, 131081, 589812, 4, 131081, 589813, 4, 131081, 589814, 4, 65542, 589815, 4, 10, 589816, 4, 11, 589820, 4, 65544, 589821, 4, 131081, 589822, 4, 131081, 589823, 4, 131081, 524288, 4, 131081, 524289, 4, 131081, 524290, 4, 131081, 524291, 4, 131081, 524292, 4, 131081, 524293, 4, 131081, 524294, 4, 131081, 524295, 4, 131081, 524296, 4, 131081, 524297, 4, 131081, 524298, 4, 131081, 524299, 4, 131081, 524300, 4, 131081, 524301, 4, 131081, 524302, 4, 131081, 524303, 4, 131081, 524304, 4, 131083, 655339, 4, 65544, 655340, 4, 131081, 655341, 4, 131081, 655342, 4, 131081, 655343, 4, 131081, 655344, 4, 131081, 655345, 4, 131081, 655346, 4, 131081, 655347, 4, 131081, 655348, 4, 131081, 655349, 4, 131081, 655350, 4, 131081, 655351, 4, 131081, 655352, 4, 131083, 655356, 4, 65544, 655357, 4, 131081, 655358, 4, 131081, 655359, 4, 131081, 589824, 4, 131081, 589825, 4, 131081, 589826, 4, 131081, 589827, 4, 131081, 589828, 4, 131081, 589829, 4, 131081, 589830, 4, 131081, 589831, 4, 131081, 589832, 4, 131081, 589833, 4, 131081, 589834, 4, 131081, 589835, 4, 131081, 589836, 4, 131081, 589837, 4, 131081, 589838, 4, 131081, 589839, 4, 131081, 589840, 4, 131083, 720875, 4, 65544, 720876, 4, 131081, 720877, 4, 131081, 720878, 4, 131081, 720879, 4, 131081, 720880, 4, 131081, 720881, 4, 131081, 720882, 4, 131081, 720883, 4, 131081, 720884, 4, 131078, 720885, 4, 196617, 720886, 4, 196617, 720887, 4, 196617, 720888, 4, 196614, 720889, 4, 5, 720890, 4, 11, 720892, 4, 65544, 720893, 4, 131081, 720894, 4, 131081, 720895, 4, 131081, 655360, 4, 131081, 655361, 4, 131081, 655362, 4, 131081, 655363, 4, 131081, 655364, 4, 131081, 655365, 4, 131081, 655366, 4, 131081, 655367, 4, 131081, 655368, 4, 131081, 655369, 4, 131081, 655370, 4, 131081, 655371, 4, 131081, 655372, 4, 131081, 655373, 4, 131081, 655374, 4, 131081, 655375, 4, 131081, 655376, 4, 131083, 786411, 4, 65544, 786412, 4, 131081, 786413, 4, 131081, 786414, 4, 131081, 786415, 4, 131081, 786416, 4, 131081, 786417, 4, 131081, 786418, 4, 131081, 786419, 4, 131081, 786420, 4, 131083, 786425, 4, 196616, 786426, 4, 196619, 786428, 4, 196616, 786429, 4, 131077, 786430, 4, 131081, 786431, 4, 131081, 720896, 4, 131081, 720897, 4, 131081, 720898, 4, 131081, 720899, 4, 131081, 720900, 4, 131081, 720901, 4, 131081, 720902, 4, 131081, 720903, 4, 131081, 720904, 4, 131081, 720905, 4, 131081, 720906, 4, 131081, 720907, 4, 131081, 720908, 4, 131081, 720909, 4, 131081, 720910, 4, 131081, 720911, 4, 131081, 720912, 4, 131083, 851947, 4, 65544, 851948, 4, 131081, 851949, 4, 131081, 851950, 4, 131081, 851951, 4, 131081, 851952, 4, 131081, 851953, 4, 131081, 851954, 4, 131081, 851955, 4, 131081, 851956, 4, 131083, 851965, 4, 65544, 851966, 4, 131081, 851967, 4, 131081, 786432, 4, 131081, 786433, 4, 131081, 786434, 4, 131081, 786435, 4, 131081, 786436, 4, 131081, 786437, 4, 131081, 786438, 4, 131081, 786439, 4, 131081, 786440, 4, 131081, 786441, 4, 131081, 786442, 4, 131081, 786443, 4, 131081, 786444, 4, 131081, 786445, 4, 131081, 786446, 4, 131081, 786447, 4, 131081, 786448, 4, 131083, 917483, 4, 65544, 917484, 4, 131081, 917485, 4, 131081, 917486, 4, 131081, 917487, 4, 131081, 917488, 4, 131081, 917489, 4, 131081, 917490, 4, 131081, 917491, 4, 131081, 917492, 4, 131083, 917501, 4, 65544, 917502, 4, 131081, 917503, 4, 131081, 851968, 4, 131081, 851969, 4, 131081, 851970, 4, 131081, 851971, 4, 131081, 851972, 4, 131081, 851973, 4, 131081, 851974, 4, 131081, 851975, 4, 131081, 851976, 4, 131081, 851977, 4, 131081, 851978, 4, 131081, 851979, 4, 131081, 851980, 4, 131081, 851981, 4, 131081, 851982, 4, 131081, 851983, 4, 131081, 851984, 4, 131083, 983019, 4, 65544, 983020, 4, 131081, 983021, 4, 131081, 983022, 4, 131081, 983023, 4, 131081, 983024, 4, 131081, 983025, 4, 131081, 983026, 4, 131081, 983027, 4, 131081, 983028, 4, 131083, 983037, 4, 65544, 983038, 4, 131081, 983039, 4, 131081, 917504, 4, 131081, 917505, 4, 131081, 917506, 4, 131081, 917507, 4, 131081, 917508, 4, 131081, 917509, 4, 131081, 917510, 4, 131081, 917511, 4, 131081, 917512, 4, 131081, 917513, 4, 131081, 917514, 4, 131081, 917515, 4, 131081, 917516, 4, 131081, 917517, 4, 131081, 917518, 4, 131081, 917519, 4, 131081, 917520, 4, 131083, 1048555, 4, 65544, 1048556, 4, 131081, 1048557, 4, 131081, 1048558, 4, 131081, 1048559, 4, 131081, 1048560, 4, 131081, 1048561, 4, 131081, 1048562, 4, 131081, 1048563, 4, 131081, 1048564, 4, 65542, 1048565, 4, 10, 1048566, 4, 10, 1048567, 4, 10, 1048568, 4, 11, 1048573, 4, 65544, 1048574, 4, 131081, 1048575, 4, 131081, 983040, 4, 131081, 983041, 4, 131081, 983042, 4, 131081, 983043, 4, 131081, 983044, 4, 131081, 983045, 4, 131081, 983046, 4, 131081, 983047, 4, 131081, 983048, 4, 131081, 983049, 4, 131081, 983050, 4, 131081, 983051, 4, 131081, 983052, 4, 131081, 983053, 4, 131081, 983054, 4, 131081, 983055, 4, 131081, 983056, 4, 131083, 1114091, 4, 196616, 1114092, 4, 196617, 1114093, 4, 196617, 1114094, 4, 196617, 1114095, 4, 196617, 1114096, 4, 196617, 1114097, 4, 196617, 1114098, 4, 196617, 1114099, 4, 196617, 1114100, 4, 196617, 1114101, 4, 196617, 1114102, 4, 196617, 1114103, 4, 196617, 1114104, 4, 196614, 1114105, 4, 196609, 1114106, 4, 196609, 1114107, 4, 196609, 1114108, 4, 196609, 1114109, 4, 196613, 1114110, 4, 196617, 1114111, 4, 196617, 1048576, 4, 196617, 1048577, 4, 196617, 1048578, 4, 196617, 1048579, 4, 196617, 1048580, 4, 196617, 1048581, 4, 196617, 1048582, 4, 196617, 1048583, 4, 196617, 1048584, 4, 196617, 1048585, 4, 196617, 1048586, 4, 196617, 1048587, 4, 196617, 1048588, 4, 196617, 1048589, 4, 196617, 1048590, 4, 196617, 1048591, 4, 196617, 1048592, 4, 196619 )
script = ExtResource( 2 )

[node name="DamageWalls" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
collision_layer = 64
collision_mask = 5
format = 1

[node name="Exit_UP" parent="." instance=ExtResource( 4 )]
position = Vector2( 64.197, 61.112 )

[node name="Exit_DOWN" parent="." instance=ExtResource( 4 )]
position = Vector2( 63.3838, 124.553 )

[node name="Exit_LEFT" parent="." instance=ExtResource( 5 )]
position = Vector2( 17.8482, 92.0631 )

[node name="Exit_RIGHT" parent="." instance=ExtResource( 5 )]
position = Vector2( 111.332, 92.4619 )

[node name="camera_limit_NW" type="Position2D" parent="."]
position = Vector2( 144.797, 71.2937 )

[node name="camera_limit_SE" type="Position2D" parent="."]
position = Vector2( 184.749, 114.79 )

[node name="testing_player_spawn" type="Position2D" parent="."]
position = Vector2( 117.98, 21.5321 )

[node name="level_setups" type="Node2D" parent="."]

[node name="level_setup_1" type="Node2D" parent="level_setups"]

[node name="breakable_tile" parent="level_setups/level_setup_1" instance=ExtResource( 9 )]

[node name="baddie_spawn_line1" type="Line2D" parent="level_setups/level_setup_1"]

[node name="baddie_spawn_line2" type="Line2D" parent="level_setups/level_setup_1"]

[node name="BearBoi" parent="level_setups/level_setup_1/baddie_spawn_line2" instance=ExtResource( 8 )]

[node name="baddie_spawn_point1" type="Position2D" parent="level_setups/level_setup_1"]
position = Vector2( 100, 200 )

[node name="BearBoi" parent="level_setups/level_setup_1/baddie_spawn_point1" instance=ExtResource( 8 )]
position = Vector2( -0.749146, 0 )

[node name="baddie_spawn_point2" type="Position2D" parent="level_setups/level_setup_1"]
position = Vector2( 50, 200 )

[node name="item_spawn_point1" type="Position2D" parent="level_setups/level_setup_1"]
position = Vector2( 300, 200 )

[node name="health_pickup" parent="level_setups/level_setup_1/item_spawn_point1" instance=ExtResource( 7 )]

[node name="item_spawn_point2" type="Position2D" parent="level_setups/level_setup_1"]
position = Vector2( 350, 200 )
[connection signal="body_entered" from="Exit_UP" to="." method="_on_Exit_UP_body_entered"]
[connection signal="body_entered" from="Exit_DOWN" to="." method="_on_Exit_DOWN_body_entered"]
[connection signal="body_entered" from="Exit_LEFT" to="." method="_on_Exit_LEFT_body_entered"]
[connection signal="body_entered" from="Exit_RIGHT" to="." method="_on_Exit_RIGHT_body_entered"]
